--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+Form {
+  /* border: 1px solid lightgray; */
+
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+Form textarea {
+  background-color: transparent;
+  margin-top: 5px;
+  height: 70px;
+  font-size: 20px;
+  padding: 5px;
+}
+Form textarea::placeholder {
+  font-size: 20px;
+}
+Form input {
+  /* height: 25px; */
+  font-size: 20px;
+  padding: 5px;
+}
+Form input::placeholder {
+  font-size: 20px;
+}
+Form div {
+  /* border: 1px solid #000; */
+
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: center;
+  /* align-items: center; */
+  margin: 5px 0;
+}
