--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,33 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
+  /* Set a specific height */
+  min-height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  /* filter: blur(1px); */
 }
 
+.home p {
+  padding: 10px;
+  text-align: justify;
+}
+.home h2 {
+  padding: 10px;
+  text-align: center;
+}
+.home button {
+  padding: 10px 20px;
+  text-align: center;
+  border: none;
+  background-color: rgb(53, 132, 93);
+  color: #fff;
+  font-size: 20px;
+}
 .sectors {
   width: 100vw;
 
@@ -116,11 +141,29 @@
 }
 
 .logo {
-  border: #fff 5px solid;
-  padding: 0 5px !important;
+  /* border: #fff 5px solid; */
+  padding: 5px 10px 0 20px !important;
   font-size: 25px;
-  font-weight: 700;
+  font-weight: 800;
   color: #fff;
+  font-family: var(
+    --font-headings,
+    "PT Sans",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    "Roboto",
+    "Oxygen",
+    "Ubuntu",
+    "Cantarell",
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif
+  );
+  -webkit-font-smoothing: antialiased;
+  letter-spacing: normal;
+  line-height: 1;
 }
 .navbar .share {
   margin: 5px 10px 0px 0px;
@@ -268,4 +311,151 @@ a {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+/* ### 3D BUTTON ### */
+
+/* * {
+  box-sizing: border-box;
+}
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+button {
+  color: #fff !important;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+}
+button.learn-more {
+  font-weight: 600;
+  font-size: 15px;
+  color: #382b22;
+  text-transform: uppercase;
+  padding: 1.25em 2em;
+  background: #00a766;
+  border: 2px solid rgb(32, 78, 55);
+  border-radius: 0.75em;
+  transform-style: preserve-3d;
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    background 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+button.learn-more::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #35845d;
+  border-radius: inherit;
+
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+button.learn-more:hover {
+  background: #01f899;
+  transform: translate(0, 0.25em);
+}
+button.learn-more:hover::before {
+
+  transform: translate3d(0, 0.5em, -1em);
+}
+button.learn-more:active {
+  background: #04ff9f;
+  transform: translate(0em, 0.75em);
+}
+button.learn-more:active::before {
+  box-shadow: 0 0 0 2px #00a766, 0 0 #35845d;
+  transform: translate3d(0, 0, -1em);
+} */
+
+/* Seventh Button */
+
+.button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 200px;
+  /* border: 2px solid rgb(53, 132, 93); */
+  border: 2px solid #fff;
+  backdrop-filter: blur(10px);
+  margin: 20px;
+  color: rgb(53, 132, 93);
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 15px;
+  letter-spacing: 1.5px;
+  overflow: hidden;
+}
+
+a {
+  /* color: rgb(53, 132, 93); */
+  color: #fff;
+  text-decoration: none;
+  /* letter-spacing: 1px; */
+}
+.button {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.button a {
+  position: relative;
+  left: 0;
+  transition: all 0.35s ease-Out;
+}
+
+#dub-arrow {
+  width: 100%;
+  height: 100%;
+  /* background: rgb(53, 132, 93); */
+  backdrop-filter: blur(10px);
+  left: -200px;
+  position: absolute;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.35s ease-Out;
+  bottom: 0;
+}
+
+.button img {
+  width: 30px;
+  height: auto;
+}
+
+.button:hover {
+  border-color: #1da1f2;
+}
+.button:hover #dub-arrow {
+  left: 0;
+}
+
+.button:hover a {
+  left: 150px;
+}
+
+@media screen and (min-width: 1000px) {
+  h1 {
+    font-size: 2.2em;
+  }
+  #container {
+    width: 50%;
+  }
 }
