--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,11 @@
 html {
   scrollbar-width: none !important;
   -ms-overflow-style: -ms-autohiding-scrollbar !important;
+  scroll-behavior: smooth !important;
 }
-
+html::-webkit-scrollbar-track {
+  display: none !important;
+}
 html::-webkit-scrollbar {
   display: none !important;
 }
@@ -30,26 +33,84 @@ body {
   overflow-x: hidden !important;
 }
 
-/* input:focus,
-textarea:focus {
-  outline: none;
-} */
+/* ### CONTACT ###   */
+
+.contact {
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  .contact {
+    flex-direction: column;
+  }
+}
+
+.formImg {
+  /* display: none; */
+  width: 50%;
+  height: 100%;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+}
+@media screen and (max-width: 600px) {
+  .formImg {
+    /* display: block; */
+    width: 50%;
+  }
+  Form {
+    width: 50%;
+  }
+}
+
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.flexRow {
+  display: flex;
+  flex-direction: row;
+}
+@media screen and (max-width: 500px) {
+  .flexRow {
+    flex-direction: column;
+  }
+  .flexRow .button {
+    margin: 5px 0;
+  }
+}
 
 Form {
   /* border: 1px solid lightgray; */
+  width: 90vw;
+  max-width: 500px;
 
-  border-radius: 10px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* background-color: #000; */
 }
+
+/* @media screen and (max-width: 500px) {
+  Form{
+    width: 50%;
+  }
+} */
 
 Form textarea {
   background-color: transparent;
   margin-top: 5px;
-  height: 70px;
+  height: 100px;
   font-size: 20px;
   padding: 5px;
 }
@@ -60,6 +121,9 @@ Form input {
   /* height: 25px; */
   font-size: 20px;
   padding: 5px;
+  border: none;
+  border: #000 1px solid;
+  border-radius: 0;
 }
 Form input::placeholder {
   font-size: 20px;
@@ -120,6 +184,7 @@ a {
   text-decoration: none;
   /* letter-spacing: 1px; */
 }
+
 .button {
   position: relative;
   overflow: hidden;
@@ -151,6 +216,16 @@ a {
 .button img {
   width: 30px;
   height: auto;
+}
+.formButton {
+  background-color: transparent !important;
+  border: rgb(53, 132, 93) 2px solid;
+}
+.formButton img {
+  margin-top: 10px;
+}
+.formButton:hover {
+  border-color: #000;
 }
 
 .button.greenColor {
