--- a/src/App.css
+++ b/src/App.css
@@ -344,6 +344,18 @@ a {
   align-items: center;
 }
 
+.flex .icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 2px;
+  margin: 10px 5px;
+}
+
+.titolo {
+  margin: 50px 0 0 0;
+  display: flex;
+  justify-content: center;
+}
 .footer {
   display: flex;
   flex-direction: column;
@@ -398,7 +410,7 @@ a {
 
 .progetto {
   width: 100%;
-  height: 60vh;
+
   display: flex;
   flex-direction: column-reverse;
   margin-top: 25px;
@@ -419,6 +431,7 @@ a {
   justify-content: center;
   align-items: center;
   padding: 50px 0;
+  text-align: center;
 }
 
 .progetto .text .description {
@@ -429,6 +442,13 @@ a {
   width: 100%;
   height: 100%;
   padding: 0;
+  min-height: 400px;
+}
+
+@media screen and (max-width: 500px) {
+  .frame {
+    min-height: 200;
+  }
 }
 
 .noselect {
