--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
+}
+
+.parallax {
   /* Set a specific height */
   min-height: 500px;
   /* Create the parallax scrolling effect */
@@ -45,17 +48,17 @@
   justify-content: center;
   align-items: center;
   /* padding: 50px; */
-  padding: 5vw 0;
+  padding: 25px 0 0 0;
 }
 
 .sector {
-  width: 90vw;
+  width: calc(100vw - 50px);
   border: 3px solid #000;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5vw;
+  margin-bottom: 25px;
   color: #14310d;
 }
 
@@ -76,32 +79,32 @@
 }
 
 @media screen and (max-width: 700px) {
-  .home {
+  .parallax {
     background-attachment: scroll !important;
   }
 }
 
 /* iPad */
 @media screen and (max-width: 1024px) and (max-height: 768px) {
-  .home {
+  .parallax {
     background-attachment: scroll !important;
   }
 }
 /* iPad Landscape */
 @media screen and (max-width: 768px) and (max-height: 1024px) {
-  .home {
+  .parallax {
     background-attachment: scroll !important;
   }
 }
 /* iPad Pro */
 @media screen and (max-width: 1366px) and (max-height: 1024px) {
-  .home {
+  .parallax {
     background-attachment: scroll !important;
   }
 }
 /* iPad Pro Landscape */
 @media screen and (max-width: 1024px) and (max-height: 1366px) {
-  .home {
+  .parallax {
     background-attachment: scroll !important;
   }
 }
@@ -109,8 +112,8 @@
 @media screen and (min-width: 600px) {
   .sector {
     flex-direction: row;
-    width: 95vw;
-    margin-bottom: 2.5vw;
+
+    margin-bottom: 25px;
   }
   .sector.reverse {
     flex-direction: row-reverse;
@@ -152,7 +155,8 @@
   height: 65px;
   width: 100vw;
   background-color: rgb(53, 132, 93);
-  color: #000000 !important;
+  /* color: #000000 !important; */
+  border-bottom: rgb(36, 92, 64) 5px solid;
   position: fixed;
   top: 0;
   z-index: 2;
@@ -342,6 +346,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* backdrop-filter: brightness(50%); */
 }
 
 .flex .icon {
@@ -349,6 +354,10 @@ a {
   height: 50px;
   border-radius: 2px;
   margin: 10px 5px;
+}
+
+.portfolioTitle {
+  font-size: 40px;
 }
 
 .titolo {
@@ -370,8 +379,8 @@ a {
 
 } */
 
-.containerImg {
-}
+/* .containerImg {
+} */
 
 .singlePortfolio .imgSinglePortfolio {
   width: 100vw;
@@ -390,8 +399,8 @@ a {
 .singlePortfolio .flex {
   color: #fff;
   max-width: 500px;
-  padding: 50px 20px;
-  backdrop-filter: blur(1.5px);
+  padding: 30px 20px;
+  /* backdrop-filter: blur(10px); */
 }
 .singlePortfolio .flex p {
   margin-top: 10px;
@@ -405,7 +414,8 @@ a {
 .progettiContainer {
   padding: 0 20px;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  margin-bottom: 25px;
 }
 
 .progetto {
@@ -422,6 +432,9 @@ a {
   .progetto {
     flex-direction: row;
   }
+  .progetto.reverse {
+    flex-direction: row-reverse;
+  }
 }
 
 .progetto .text {
@@ -434,8 +447,15 @@ a {
   text-align: center;
 }
 
-.progetto .text .description {
-  max-width: 500px;
+.progetto .text h2 {
+  padding: 0 25px;
+}
+.progetto .text p {
+  max-width: 500px !important;
+  padding: 0 25px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
 }
 
 .frame {
@@ -447,7 +467,12 @@ a {
 
 @media screen and (max-width: 500px) {
   .frame {
-    min-height: 200;
+    min-height: 200px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .frame {
+    min-height: 700px;
   }
 }
 
