--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,10 @@
   margin-bottom: 25px;
   color: #14310d;
 }
+.headerSinglePortfolio .sector {
+  width: 100vw;
+  border: none;
+}
 
 .textSector {
   width: 100%;
@@ -424,7 +428,6 @@ a {
 
 .progetto {
   width: 100%;
-
   display: flex;
   flex-direction: column-reverse;
   margin-top: 25px;
@@ -467,6 +470,13 @@ a {
   height: 100%;
   padding: 0;
   min-height: 400px;
+}
+
+.frame.img img {
+  object-fit: cover;
+}
+.frame.video {
+  border: 2px solid red;
 }
 
 @media screen and (max-width: 500px) {
